# Registro-ULTIMATE-de-Jogos

./: .gitignore  LICENSE  README.md  Registro_ULTIMATE_de_Jogos.py  main.py  pyproject.toml
export/: Jogos.xlsx
saves/: jogos.json  tarefas.json
src/: constantes.py  dados.py  estatisticas.py  exportacao.py  utils.py
src/gui/: app.py  componentes.py  janelas.py
