[project]
name = "registro-ultimate-de-jogos"
version = "0.1.0"
description = "Este programa tem como propósito catalogar jogos finalizados, inspirado na planilha de jogos do canal Cogumelando Videogame."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pyperclip>=1.9.0",
    "reportlab>=4.3.1",
]
